ACL component permission admin/access.xml admin/config.xml ======== @ToDo terminar esqueleto para ExtJS ======== @ToDo terminar agregar una vista grid @ToDo terminar de agregar un dashboard @ToDo JToolbar::help -> pdf#secciones ======== tx need use published states to compile only required @ToDo implement throw state buttons in admin/models/*.php ======== tx me gustaría poder cambiar el prefijo #_ Cambié #_ por [%%compobjectprefix%%] en muchos archivos @ToDo implement prefix in component object

--- a/admin/codetemplates/j_3_4_standard/com_architectcomp_j34standard/admin/models/forms/compobject.xml
+++ b/admin/codetemplates/j_3_4_standard/com_architectcomp_j34standard/admin/models/forms/compobject.xml
@@ -140,7 +140,7 @@
 			label="JFIELD_ORDERING_LABEL"
 			description="JFIELD_ORDERING_DESC"
 			type="[%%architectcomp%%]ordering"
-			table="#__[%%architectcomp%%]_[%%compobjectplural%%]"
+			table="[%%compobjectprefix%%][%%architectcomp%%]_[%%compobjectplural%%]"
 		/>
         [%%ENDIF INCLUDE_ORDERING%%]
         [%%IF INCLUDE_DESCRIPTION%%]
