--- a/admin/codetemplates/j_3_4_standard/com_architectcomp_j34standard/admin/models/forms/compobject.xml
+++ b/admin/codetemplates/j_3_4_standard/com_architectcomp_j34standard/admin/models/forms/compobject.xml
@@ -140,7 +140,7 @@
 			label="JFIELD_ORDERING_LABEL"
 			description="JFIELD_ORDERING_DESC"
 			type="[%%architectcomp%%]ordering"
-			table="[%%compobjectprefix%%][%%architectcomp%%]_[%%compobjectplural%%]"
+			table="#__[%%architectcomp%%]_[%%compobjectplural%%]"
 		/>
         [%%ENDIF INCLUDE_ORDERING%%]
         [%%IF INCLUDE_DESCRIPTION%%]
