--- a/admin/models/forms/componentobject.xml
+++ b/admin/models/forms/componentobject.xml
@@ -51,6 +51,14 @@
 			required="true"
    		/>
         <field
+            name="version_note"
+            type="text"
+            label="JGLOBAL_FIELD_VERSION_NOTE_LABEL"
+			description="JGLOBAL_FIELD_VERSION_NOTE_DESC"
+			class="span12"
+			size="45"
+		/>
+        <field
             name="source_table"
             type="hidden"
             label="COM_COMPONENTARCHITECT_COMPONENTOBJECTS_FIELD_SOURCE_TABLE_LABEL"
@@ -843,6 +851,16 @@
 		    class="readonly"
 		    readonly="true"
 		    filter="unset"
+		/>
+        <field
+            name="version"
+            type="text"
+			label="COM_COMPONENTARCHITECT_FIELD_VERSION_LABEL"
+            description="COM_COMPONENTARCHITECT_COMPONENTOBJECTS_FIELD_VERSION_DESC"
+			class="readonly"
+			size="6"
+			readonly="true"
+			filter="unset"
 		/>
         <field
             name="checked_out"
