--- a/admin/models/forms/fieldset.xml
+++ b/admin/models/forms/fieldset.xml
@@ -51,6 +51,14 @@
 			required="true"
    		/>
         <field
+            name="version_note"
+            type="text"
+            label="JGLOBAL_FIELD_VERSION_NOTE_LABEL"
+			description="JGLOBAL_FIELD_VERSION_NOTE_DESC"
+			class="span12"
+			size="45"
+		/>
+        <field
             name="ordering"
 			label="JFIELD_ORDERING_LABEL"
 			description="JFIELD_ORDERING_DESC"
@@ -158,6 +166,16 @@
 		    class="readonly"
 		    readonly="true"
 		    filter="unset"
+		/>
+        <field
+            name="version"
+            type="text"
+			label="COM_COMPONENTARCHITECT_FIELD_VERSION_LABEL"
+            description="COM_COMPONENTARCHITECT_FIELDSETS_FIELD_VERSION_DESC"
+			class="readonly"
+			size="6"
+			readonly="true"
+			filter="unset"
 		/>
         <field
             name="checked_out"
