--- a/admin/models/forms/fieldtype.xml
+++ b/admin/models/forms/fieldtype.xml
@@ -53,6 +53,14 @@
 			disabled="true"
    		/>
         <field
+            name="version_note"
+            type="text"
+            label="JGLOBAL_FIELD_VERSION_NOTE_LABEL"
+			description="JGLOBAL_FIELD_VERSION_NOTE_DESC"
+			class="span12"
+			size="45"
+		/>
+        <field
             name="catid"
             type="categoryedit"
 			label="JCATEGORY"
@@ -832,6 +840,16 @@
 		    readonly="true"
 		    filter="unset"
 			disabled="true"
+		/>
+        <field
+            name="version"
+            type="text"
+			label="COM_COMPONENTARCHITECT_FIELD_VERSION_LABEL"
+            description="COM_COMPONENTARCHITECT_FIELDTYPES_FIELD_VERSION_DESC"
+			class="readonly"
+			size="6"
+			readonly="true"
+			filter="unset"
 		/>
         <field
             name="checked_out"
