--- a/admin/models/forms/component.xml
+++ b/admin/models/forms/component.xml
@@ -270,6 +270,19 @@
                 <option	value="0">COM_COMPONENTARCHITECT_COMPONENT_GENERATES_GENERIC_VALUE_DO_NOT_GENERATE</option>
             </field>
             <field
+                name="generate_admin_dashboard"
+                type="radio"
+                label="COM_COMPONENTARCHITECT_COMPONENTS_FIELD_GENERATE_ADMIN_DASHBOARD_LABEL"
+                description="COM_COMPONENTARCHITECT_COMPONENTS_FIELD_GENERATE_ADMIN_DASHBOARD_DESC"
+                class="btn-group"
+                size="1"
+                required="true"
+                default="1"
+		    >
+                <option	value="1">COM_COMPONENTARCHITECT_COMPONENT_GENERATES_GENERIC_VALUE_GENERATE</option>
+                <option	value="0">COM_COMPONENTARCHITECT_COMPONENT_GENERATES_GENERIC_VALUE_DO_NOT_GENERATE</option>
+            </field>
+            <field
                 name="generate_categories"
                 type="radio"
                 label="COM_COMPONENTARCHITECT_COMPONENTS_FIELD_GENERATE_CATEGORIES_LABEL"
